[VAS-828] feat: Updated openapi and helm charts
